styles.css
body {
  background-color: #000000;
  font-size: 20px;
  color: #ffffff;
  font-family: 'Roboto', sans-serif;
  margin-top: 100px;
  margin-bottom: 100px;
  margin-right: 10%;
  margin-left: 10%;
}

.header {
  color: white;
  font-family: 'Merriweather', serif;
  font-size: 30px;
}
.nav {
  color: white;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 2px;
  font-size: 12px;
  align=: left
}

.subheader {
  color: white;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 2px;
  font-size: 12px;
}

img {
  float: left;
  padding-right: 10px;
}

.imageblock { 
  vertical-align: middle;
}

/* Styles for a link before hover or visiting */
a:link {
  color: #ffffff;
  text-decoration: none;
}

/* Styles for a link on hover */
a:hover {
  color: rgb(255, 82, 82);
  text-decoration: underline;
}

/* Styles for a link on hover */
a:visited {
  color: #ffffff;
  text-decoration: none;
}

footer {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

.form {
  background-color: #ffffff;
  border: none;
  color: black;
  padding: 16px 32px;
  text-decoration: none;
  margin: 4px 2px;
  cursor: pointer;
  text-align: center;
  display: inline-block;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  border-radius: 8px;
}

input[type=button], input[type=submit], input[type=reset] {
  background-color: #606060;
  border: none;
  color: #ffffff;
  padding: 16px 32px;
  text-decoration: none;
  font-family: 'Roboto', sans-serif;
  margin: 4px 2px;
  cursor: pointer;
}

.collapsible {
  background-color: #383838;
  color: #ffffff;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 16px;
}

.active, .collapsible:hover {
  background-color: #787878;
}

.content {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  color: #ffffff;
  background-color: #383838;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

